@@ -1,3 +1,6 @@
+Changelog 0.3.21 [20230209]:
+- Added New Setting "Enable Automatic Subtitles for Dub Streams"
+
 Changelog 0.3.20 [20230208]:
 - Made dumb mistake with Next Up
 
